--- a/2023-1/beamer/C13_md1.tex
+++ b/2023-1/beamer/C13_md1.tex
@@ -1,7 +1,7 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -133,7 +133,7 @@
         
         
         \begin{itemize}
-            \item[$\circ$]  $p$ es primo si y solo si $P = m_1m_2$ $\Rightarrow$ $m_1 = 1, m_2=p$ o  $m_1 = p, m_2=1$. 
+            \item[$\circ$]  $p$ es primo si y solo si $p = m_1m_2$ $\Rightarrow$ $m_1 = 1, m_2=p$ o  $m_1 = p, m_2=1$. 
             \vskip .4cm\pause
             \item[$\circ$]   $m\ge 2$ no es un primo si y sólo si existen $1 < m_1, m_2 < m$, tales que $m=m_1m_2$.
         \end{itemize}
