menores en soluciones prc 5

--- a/2023-1/practicos/Practico5-soluciones.tex
+++ b/2023-1/practicos/Practico5-soluciones.tex
@@ -1193,18 +1193,12 @@
         
         En  el grafo (6) la caminata euleriana debe salir de $a$ y llegar a $e$ o viceversa. Una caminata posible es: $abcedae$.
         
-        \item Para (2) y (3), decir si existen ciclos hamiltonianos.
+        \item  Determinar si los grafos (2), (3) y (4) tienen ciclos hamiltonianos.
         
-        \rta En (2) el  ciclo $512341$ es hamiltoniano. 
+        \rta (2) y (3) no tienen ciclos hamiltonianos, pues ambos grafos tienen vértices de valencia 1 y  es claro que si hay un ciclo hamiltoniano cada vértice debe tener valencia al menos 2. 
+
+        (4) tiene ciclos hamiltonianos, por ejemplo $512345$.
         
-        
-        En (3) no hay ciclos hamiltonianos: observemos  que un ciclo hamiltoniano puede empezar de cualquier vértice. Supongamos que (3) tiene un ciclo hamiltoniano y lo empezamos del vértice $3$. El comienzo del ciclo es $327$, luego podría ser  a) $3271$ o  b) $3278$. 
-        
-        En  el caso a) solo  puede continuar como $32716$ y  de ahí  como $327168$ o $327164$. El $327168$ solo puede continuar en $3271687$ repitiendo vértice sin ser ciclo. El  $327164$ solo puede continuar en $3271645$ y ahí terminar  sin ser ciclo. 
-        
-        En  el caso b) solo puede continuar como $32786$ y luego  como $3278645$ terminando sin ser ciclo,  o $3278617$ repitiendo vértice sin ser ciclo. 
-        
-        En  definitiva no hay ciclos hamiltonianos en (3). 
         
         \item Determinar cuales de los siguientes pares de grafos son isomorfos:
         
