--- a/2023-1/practicos/Practico5.tex
+++ b/2023-1/practicos/Practico5.tex
@@ -571,7 +571,7 @@
         \item Determine en cada caso si existen subgrafos completos de más de 2 vértices.
         \item Para el grafo (1), dé todos los caminos que unen $a$ con $b$.
         \item Dé caminatas eulerianas en los grafos (4), (5) y (6).
-        \item Para (2) y (3), decir si existen ciclos hamiltonianos.
+        \item Determinar si los grafos (2), (3) y (4) tienen ciclos hamiltonianos.
         \item Determinar cuales de los siguientes pares de grafos son isomorfos:
             \begin{enumerate}
                 \item  (4) y (2),
