--- a/2023-1/practicos/Practico5-soluciones.tex
+++ b/2023-1/practicos/Practico5-soluciones.tex
@@ -912,7 +912,7 @@
 
     
 
-    \item Encuentre una función del grafo $A$ al $B$ que preserve valencias. ¿Es un isomorfismo?.
+    \item Encuentre una función biyectiva del grafo $A$ al $B$ que preserve valencias. ¿Es un isomorfismo?.
     
     \begin{tabular}{llll}
         $A:$ & &\qquad$B:$& \\
