--- a/2023-1/practicos/Practico5.tex
+++ b/2023-1/practicos/Practico5.tex
@@ -362,7 +362,7 @@
     \end{enumerate}
 
 
-\item Encuentre una función del grafo $A$ al $B$ que preserve valencias. ¿Es un isomorfismo?.
+\item Encuentre una función biyectiva del grafo $A$ al $B$ que preserve valencias. ¿Es un isomorfismo?.
 \vskip .2cm
     \begin{tabular}{llll}
         $A:$ & &\qquad$B:$& \\
