--- a/2023-1/apunte/main.tex
+++ b/2023-1/apunte/main.tex
@@ -133,7 +133,7 @@
 %%%=======================
 %%% CAP3 =================
     \input{Cap.03.tex}
-    %\input{Cap.03.corregido_poner.tex} %%% Sustituir Cap.03.tex por este archivo para la versión final
+    %\input{Cap.03.2023.tex} %%% como fue en 2023, con la definición de Biggs de mcd
 %    \input{Cap.03_alternativo_1.tex} % este supongo que es algo viejo
 %%%=======================
 %%%=======================
