--- a/2023-1/apunte/classicthesis-config.tex
+++ b/2023-1/apunte/classicthesis-config.tex
@@ -35,19 +35,19 @@
 \PassOptionsToPackage{eulerchapternumbers,listings,pdfspacing, subfig,beramono,eulermath,parts}{classicthesis}
 % Available options: drafting parts nochapters linedheaders eulerchapternumbers beramono eulermath pdfspacing minionprospacing tocaligned dottedtoc manychapters listings floatperchapter subfig
 
-\newcommand{\myTitle}{A Classic Thesis Style\xspace}
-\newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
-\newcommand{\myDegree}{Doktor-Ingenieur (Dr.-Ing.)\xspace}
-\newcommand{\myName}{André Miede\xspace}
+\newcommand{\myTitle}{Matemática Discreta I \\ FAMAF  - UNC\xspace}
+\newcommand{\mySubtitle}{´- \xspace}
+\newcommand{\myDegree}{-\xspace}
+\newcommand{\myName}{Alejandro Tiraboschi\xspace}
 \newcommand{\myProf}{Put name here\xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Put name here\xspace}
-\newcommand{\myFaculty}{Put data here\xspace}
+\newcommand{\myFaculty}{FAMAF - UNC\xspace}
 \newcommand{\myDepartment}{Put data here\xspace}
-\newcommand{\myUni}{Put data here\xspace}
-\newcommand{\myLocation}{Saarbrücken\xspace}
-\newcommand{\myTime}{September 2015\xspace}
-\newcommand{\myVersion}{version 4.2\xspace}
+\newcommand{\myUni}{Universidad Nacional de Córdoba\xspace}
+\newcommand{\myLocation}{Córdoba\xspace}
+\newcommand{\myTime}{Julio 2023\xspace}
+\newcommand{\myVersion}{versión 2023.2\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
