--- a/2024-1/practicos/Practico4-soluciones.tex
+++ b/2024-1/practicos/Practico4-soluciones.tex
@@ -549,6 +549,16 @@ $x \equiv 1\ ( 3); $ \qquad $x \equiv 1 \ ( 5)$; \qquad $x \equiv 1\ ( 7)$.
     Esto es $\sum_{i=0}^8 a_i= 45-d$. Además $2^{29} = \sum_{i=0}^8 a_i10^i \equiv \sum_{i=0}^8 a_i\pmod{9} $.     Entonces si calculamos esta congruencia podemos obtener $d$: 
     $2^{29}=(2^6)^42^5\equiv 2^5 \pmod{9}$ y $2^5\equiv 5 \pmod{9}$ por lo tanto $d\equiv -5 \pmod{9}$ o sea $d=4$ es el dígito faltante. 
     
+
+    \item${}^{(*)}$ Cinco hombres recogieron en una isla un cierto número de cocos y resolvieron repartirlos al día siguiente. Durante la noche uno de ellos decidió separar su parte y para ello dividió el total en cinco partes y dió un coco que sobraba a un mono y se fue a dormir. Enseguida otro de los hombres hizo lo mismo, dividiendo lo que había quedado por cinco, dando un coco que sobraba a un mono y retirando su parte, se fue a dormir. Uno tras otro los tres restantes hicieron lo mismo, dándole a un mono el coco que sobraba. A la ma\~nana siguiente repartieron los cocos restantes, dándole a un mono el coco sobrante. ¿Cuál es el número mínimo de cocos que se recogieron?
+    
+    \rta
+
+
+    \item${}^{(*)}$ La producción diaria de huevos en una granja es inferior a 75. Cierto día el recolector informó que la cantidad de huevos recogida era tal que contando de a 3 sobraban 2, contando de a 5 sobraban 4 y contando de a 7 sobraban 5. El capataz, dijo que eso era imposible. ¿Quién tenía razón? Justificar.
+
+    \rta
+
 \end{enumerate}
 
 
