--- a/2023-1/practicos/Practico3-soluciones.tex
+++ b/2023-1/practicos/Practico3-soluciones.tex
@@ -283,14 +283,16 @@ Luego  $(1503)_6 + (1111)_2 = (3124)_5$
     
     \item $b + c$ es par si y  sólo si $b$ y $c$ son ambos pares o ambos impares.
     
-    \rta $b=2q, c=2p \Rightarrow b+c=2(q+p); b=2q+1, c=2p+1\Rightarrow b+c=2q+1+2p+1=2(q+p+1)$.
+    \rta ($\Rightarrow$)\, Por el ítem anterior la suma de un número impar y un número par es impar, por lo tanto si $b+c$ es par, $b$ y $c$ deben ser ambos pares o ambos impares.
+    
+    ($\Leftarrow$)\, $b=2q, c=2p \Rightarrow b+c=2(q+p); b=2q+1, c=2p+1\Rightarrow b+c=2q+1+2p+1=2(q+p+1)$.
 \end{enumerate}
 
 
 
 \item Sea $n\in \mathbb Z$. Probar que $n$ es par si y s\'olo si $n^2$ es par.
 
-\rta $n=2q \Rightarrow n^2=2(2q^2)$. $n=2q+1\Rightarrow n^2=4q^2+4q+1=2(2q^2+2q)+1$.
+\rta Otra forma de verlo: debemos probar que el cuadrado de un número par es par  y el cuadrado de un número impar es impar. Ahora bien, $n=2q \Rightarrow n^2=2(2q^2)$, y $n=2q+1\Rightarrow n^2=4q^2+4q+1=2(2q^2+2q)+1$.
 
 
 
